--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
       href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title>Investhub</title>
   </head>
   <body>
